--- a/roles/docker-gitlab/tasks/restore.yml
+++ b/roles/docker-gitlab/tasks/restore.yml
@@ -7,7 +7,11 @@
 - name: find files
   find:
     path: '{{ gitlab_docker_restore_dir }}'
+    patterns:
+    - "{{gitlab_backup_pattern_secrets}}"
+    - "{{gitlab_backup_pattern_data}}"
     file_type: any
+    follow: yes
   register: gitlab_backup
 
 - name: data from tape
@@ -22,7 +26,11 @@
 - name: find files
   find:
     path: '{{ gitlab_docker_restore_dir }}'
+    patterns:
+    - "{{gitlab_backup_pattern_secrets}}"
+    - "{{gitlab_backup_pattern_data}}"
     file_type: any
+    follow: yes
   register: gitlab_backup
 
 - name: File permissions
@@ -35,37 +43,59 @@
   with_items: '{{ gitlab_backup.file_list | default([]) }}'
 
 # *****************************************************************************
-# restore the gitlap backup
+# restore the gitlab backup
 
 - name: Copy backup files to container
-  copy:
-    remote_src: yes
-    src: '{{ item.path }}'
-    dest: '{{ gitlab_docker_backup_dir }}/'
-    owner: root
-    group: root
-    mode: 'u=rwx,g=rwx,o=rwx'
+  command: >
+      docker cp '{{ item.path }}' {{ gitlab_container_name }}:'{{ gitlab_bv_mountpoint }}'
   loop: "{{ gitlab_backup.files }}"
 
 - name: shut down gitlab services for restoration
   command: >
-    docker exec {{ gitlab_container_name }}
-    supervisorctl stop {{ item }}
+    docker exec -t {{ gitlab_container_name }} gitlab-ctl stop {{ item }}
   loop:
   - unicorn
   - sidekiq
 
-- name: gitlab restore script
+- block:
+  - name: find gitlab secrets archive
+    find:
+      path: '{{ gitlab_docker_restore_dir }}'
+      pattern: "{{gitlab_backup_pattern_secrets}}"
+    register: backup_files
+  - set_fact:
+      backup_file: "{{gitlab_bv_mountpoint}}/{{backup_files.files[0]['path'] | basename}}"
+    when: backup_files.matched > 0
+  - name: restore gitlab secrets
+    command: >
+      docker exec -t {{ gitlab_container_name }}
+      /bin/sh -c 'tar vxzf "{{backup_file}}" -C /' 
+    when: backup_files.matched > 0
+
+- block:
+  - name: find gitlab data archive
+    find:
+      path: '{{ gitlab_docker_restore_dir }}'
+      pattern: "{{gitlab_backup_pattern_data}}"
+    register: backup_files
+  - set_fact:
+      backup_file: "{{gitlab_bv_mountpoint}}/{{backup_files.files[0]['path'] | basename | replace('_gitlab_backup.tar','')}}"
+    when: backup_files.matched > 0
+  - name: restore gitlab data
+    command: >
+      docker exec -t {{ gitlab_container_name }}
+      gitlab-rake gitlab:backup:restore force=yes BACKUP="{{backup_file}}"
+    when: backup_files.matched > 0
+
+- name: reconfigure gitlab for updated configuration
   command: >
-    docker exec -u git {{ gitlab_container_name }}
-    bundle exec rake gitlab:backup:restore force=yes BACKUP="{{backup_file}}"
-  vars:
-    backup_file: '{{ (gitlab_backup.files | first)["path"] | basename | replace("_gitlab_backup.tar","") }}'
+    docker exec -t {{ gitlab_container_name }} gitlab-ctl reconfigure
 
 - name: restart gitlab services
   command: >
-    docker exec {{ gitlab_container_name }}
-    supervisorctl start all
+    docker exec -t {{ gitlab_container_name }} gitlab-ctl start
+  register: result
+  failed_when: ( result.rc not in [ 0, 127 ] )
 
 - name: Wait for gitlab to be fully running
   uri:
@@ -74,6 +104,15 @@
   retries: 60
   delay: 5
   until: health.status == 200
+
+- name: Set root user password in restored database
+  command: >
+    docker exec -t {{ gitlab_container_name }} 
+    gitlab-rails runner 
+      'user=User.where(id: 1).first;
+       user.password="{{ gitlab_root_password }}";
+       user.password_confirmation="{{ gitlab_root_password }}";
+       user.save!'
 
 # *****************************************************************************
 # cleanup
@@ -84,5 +123,5 @@
     state: absent
 
 - name: State file
-  shell: 'date --rfc-3339=seconds > {{ docker_restore_config_base_dir }}/{{ gitlab_dv_name }}/restore.date.txt'
+  shell: 'date --rfc-3339=seconds > {{ gitlab_config_dir }}/restore.date.txt'
   when: st_gitlab_restore.stat.exists == False
