Refresh of add-vmdaedalus-inventory

--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -12,6 +12,14 @@
   - fetch:
       src: /tmp/ansible_variables
       dest: "{{inventory_hostname}}_ansible_variables"
+
+- name: Configure daedalus partitioning
+  hosts: daedalus
+  remote_user: ansibleremote
+  become: true
+  become_user: root
+  become_method: sudo
+  roles: 
   - name: Run bacula-restores symlinks
     role: bacula-restores
     tags:
