--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -13,8 +13,8 @@
       src: /tmp/ansible_variables
       dest: "{{inventory_hostname}}_ansible_variables"
 
-- name: Configure daedalus partitioning
-  hosts: daedalus
+- name: Symlink on-disk copies of bacula archives
+  hosts: bacula
   remote_user: ansibleremote
   become: true
   become_user: root
