--- a/roles/buildbot-worker-assets/tasks/main.yml
+++ b/roles/buildbot-worker-assets/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Start asset server
   docker_container:
-    name: builder-assets
+    name: buildbot-assets
     image: "httpd:alpine"
     volumes:
     - "/mnt/assets:/usr/local/apache2/htdocs/:ro"
@@ -11,6 +11,6 @@
 
 - set_fact:
     buildbot_asset_host: "http://\
-    {{asset_server.ansible_facts.docker_container.NetworkSettings.IPAddress}}\
+    {{asset_server.ansible_facts.docker_container.NetworkSettings.Gateway}}\
     :{{asset_server.ansible_facts.docker_container.NetworkSettings.Ports['80/tcp'][0].HostPort}}\
     "
