--- a/docker/buildbot-master/Dockerfile
+++ b/docker/buildbot-master/Dockerfile
@@ -1,5 +1,4 @@
-ARG         BUILDBOT_VERSION=latest
-FROM        buildbot/buildbot-master:$BUILDBOT_VERSION
+FROM        buildbot/buildbot-master:v0.9.13
 MAINTAINER  Andrew Cooper <andrew.cooper@novatechweb.com>
 
 WORKDIR /buildbot
