--- a/ansible-playbook/group_vars/docker-hosts/networking.yml
+++ b/ansible-playbook/group_vars/docker-hosts/networking.yml
@@ -48,7 +48,7 @@ phpldapadmin_port_args:
 
 phpmyadmin_hostname: phpmyadmin.novatech-llc.com
 
-buildbot_hostname: ldap.novatech-llc.com
+buildbot_hostname: buildbot.novatech-llc.com
 buildbot_port_args:
 - "{{ buildbot_ip_addr }}:80:8080"
 - "{{ buildbot_ip_addr }}:443:8443"
