--- a/roles/buildbot-worker-ptxdist/tasks/main.yml
+++ b/roles/buildbot-worker-ptxdist/tasks/main.yml
@@ -6,36 +6,60 @@
     that:
     - buildbot_worker_ptxdist_password is defined
 
+- name: Create buildbot cache volume
+  docker_volume:
+    name: '{{ cache_volume }}'
+
+- name: Populate buildbot cache volume
+  loop:
+  - /cache
+  - /cache/ccache
+  - /cache/downloads
+  - /cache/images
+  - /cache/ipkg-repository
+  - /cache/releases
+  docker_container:
+    name: '{{ container_name }}-bootstrap'
+    image: 'alpine:latest'
+    volumes:
+    - '{{ cache_volume }}:{{ cache_path }}:z'
+    detach: no
+    cleanup: yes
+    command: /bin/ash -c 
+      "mkdir -p {{item}} &&
+      chown -c -R {{buildbot_uid}}:{{buildbot_uid}} {{item}} &&
+      chmod -v 777 {{item}}"
+
 - name: Create buildbot data volume
   docker_volume:
-    name: '{{ buildbot_worker_ptxdist_data_volume }}'
+    name: '{{ data_volume }}'
 
 - name: Checkout image repo
   git:
-    repo: '{{ buildbot_worker_ptxdist_image_repo }}'
+    repo: '{{ image_repo }}'
     version: master
-    dest: '{{ buildbot_worker_ptxdist_image_dir }}'
+    dest: '{{ image_dir }}'
 
 - name: Create buildbot worker image
   docker_image:
-    name: '{{ buildbot_worker_ptxdist_image_name }}'
+    name: '{{ image_name }}'
     tag: '{{ docker_image_tag }}'
-    path: '{{ buildbot_worker_ptxdist_image_dir }}'
-    buildargs: '{{ buildbot_worker_ptxdist_build_args }}'
+    path: '{{ image_dir }}'
+    buildargs: '{{ image_args }}'
     force: true
 
 - name: Start buildbot container
   docker_container:
-    name: '{{ buildbot_worker_ptxdist_container_name }}'
-    image: '{{ buildbot_worker_ptxdist_image_name }}:{{ docker_image_tag }}'
+    name: '{{ container_name }}'
+    image: '{{ image_name }}:{{ docker_image_tag }}'
     # networks: '{{ buildbot_worker_ptxdist_networks }}'
-    volumes: '{{ buildbot_worker_ptxdist_volumes }}'
-    env: '{{ buildbot_worker_ptxdist_env }}'
+    volumes: '{{ container_volumes }}'
+    env: '{{ container_env }}'
     # ports: '{{ buildbot_worker_ptxdist_port_args }}'
 
 - name: Grab ssh public key
   command: >
-    docker exec '{{ buildbot_worker_ptxdist_container_name }}' cat /home/buildbot/.ssh/id_rsa.pub
+    docker exec '{{ container_name }}' cat /home/buildbot/.ssh/id_rsa.pub
   changed_when: false
   register: output
 
