Add role to synchronize a directory with /tmp/bacula-restores
This is used to have a secondary backup file storage because
typical restoration deletes the backup files afterward.

--- a/ansible-playbook/site.yml
+++ b/ansible-playbook/site.yml
@@ -8,6 +8,10 @@
   become_user: root
   become_method: sudo
   roles:
+  - name: Create bacula-restores symlinks
+    role: bacula-restores
+    tags:
+    - bacula_restores
   - role: mariadb
     mariadb_open_firewall: true
     mariadb_remote_root_access: false
