--- a/roles/buildbot-worker-assets/tasks/main.yml
+++ b/roles/buildbot-worker-assets/tasks/main.yml
@@ -9,8 +9,9 @@
     - 80
   register: asset_server
 
-- set_fact:
-    buildbot_asset_host: "http://\
-    {{asset_server.ansible_facts.docker_container.NetworkSettings.Gateway}}\
-    :{{asset_server.ansible_facts.docker_container.NetworkSettings.Ports['80/tcp'][0].HostPort}}\
-    "
+- add_host:
+    name: buildbot-assets # required. The hostname/ip of the host to add to the inventory, can include a colon and a port number.
+    uri: "http://\
+      {{asset_server.ansible_facts.docker_container.NetworkSettings.Gateway}}\
+      :{{asset_server.ansible_facts.docker_container.NetworkSettings.Ports['80/tcp'][0].HostPort}}\
+      "
