--- a/roles/buildbot-master/defaults/main.yml
+++ b/roles/buildbot-master/defaults/main.yml
@@ -45,8 +45,8 @@ container_env:
   BUILDBOT_WORKER_PTXDIST: 'worker-ptxdist'
   BUILDBOT_WORKER_PTXDIST_PASS: '{{ buildbot_worker_ptxdist_password }}'
   GITLAB_URI: 'https://{{ gitlab_hostname }}/'
-  GITLAB_CLIENT_ID: '{{ gitlab_buildbot_id }}'
-  GITLAB_CLIENT_SECRET: '{{ gitlab_buildbot_secret }}'
+  GITLAB_CLIENT_ID: '{{ gitlab_buildbot_auth_id }}'
+  GITLAB_CLIENT_SECRET: '{{ gitlab_buildbot_auth_secret }}'
   LDAP_URI: 'ldap://{{ openldap_hostname }}'
   LDAP_BIND_USER: 'cn=proxyagent,dc=novatech'
   LDAP_BIND_PW: '{{ openldap_proxyagent_password }}'
